[gd_scene load_steps=11 format=3 uid="uid://bynelpp7obmgv"]

[ext_resource type="Script" path="res://ui/selected_unit_hud.gd" id="1_0o2sa"]
[ext_resource type="Texture2D" uid="uid://dt4o5rmjifdjy" path="res://assets/kenney_tiny_battle/Tiles/tile_0121.png" id="2_cmea3"]
[ext_resource type="Theme" uid="uid://e7hk55klsw3w" path="res://theme/theme.tres" id="2_xmx1k"]
[ext_resource type="Texture2D" uid="uid://d06np7q8ookux" path="res://assets/ui/nes_ui.png" id="4_8cobe"]
[ext_resource type="PackedScene" uid="uid://ceq6v0ldrrgih" path="res://sfx/sound_button.tscn" id="4_wj0md"]

[sub_resource type="Gradient" id="Gradient_vipvp"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 0.160784)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_eqyrl"]
gradient = SubResource("Gradient_vipvp")

[sub_resource type="AtlasTexture" id="AtlasTexture_i4mvf"]
atlas = ExtResource("4_8cobe")
region = Rect2(35, 35, 10, 7)
margin = Rect2(2, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnodc"]
atlas = ExtResource("4_8cobe")
region = Rect2(67, 36, 10, 7)
margin = Rect2(2, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_avwqe"]
atlas = ExtResource("4_8cobe")
region = Rect2(84, 52, 9, 7)
margin = Rect2(2, 0, 0, 0)

[node name="SelectedUnitHUD" type="CanvasLayer"]
script = ExtResource("1_0o2sa")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -68.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_xmx1k")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 0
alignment = 1

[node name="MoveRangeUpdate" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate"]
layout_mode = 2
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = SubResource("GradientTexture1D_eqyrl")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_cmea3")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Move
Range"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AddRangeButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_wj0md")]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = SubResource("AtlasTexture_i4mvf")

[node name="MaxRangeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtractRangeButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveRangeUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_wj0md")]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = SubResource("AtlasTexture_qnodc")

[node name="AttackUpdate" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate"]
layout_mode = 2
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = SubResource("GradientTexture1D_eqyrl")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_cmea3")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Attack
Range"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AddAttackButton" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_wj0md")]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = SubResource("AtlasTexture_i4mvf")

[node name="AttackLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtractAttackButton" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_wj0md")]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = SubResource("AtlasTexture_qnodc")

[node name="HealUpdate" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate"]
layout_mode = 2
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = SubResource("GradientTexture1D_eqyrl")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_cmea3")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Heal"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AddHealButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_wj0md")]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = SubResource("AtlasTexture_i4mvf")

[node name="HealLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtractHealButton" parent="MarginContainer/VBoxContainer/HBoxContainer/HealUpdate/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_wj0md")]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = SubResource("AtlasTexture_qnodc")

[node name="TotalCrew" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew"]
layout_mode = 2
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = SubResource("GradientTexture1D_eqyrl")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_cmea3")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Crew:"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetCrew" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_wj0md")]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = SubResource("AtlasTexture_avwqe")

[node name="CrewLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/TotalCrew/HBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
